# tenor-annotation

./: .gitignore  README.md
app/: Dockerfile  LICENSE  README.md  docker-compose.yml  get_dataset.sh  pyproject.toml  run_app.sh
app/backend/: README.md  annotation_session.py  create_tables.py  database.py  server.py  test_backend.py  topic_model.py  topic_model_new.py
app/frontend/: .env  .env.production  Context.jsx  Dockerfile  README.md  manifest.json  package-lock.json  package.json  utils.js
app/frontend/Components/: Component_template.jsx  DocumentDetail.jsx  DocumentList.jsx  DropdownForm.jsx  Navbar.jsx  RenameForm.jsx  Settings.jsx  Tutorial.jsx
app/frontend/Views/: Login_dummy.js  PageTemplate.jsx  Register.js  RegisterEmail.js  TableView.jsx
app/frontend/public/: index.html
app/frontend/src/: App.js  README.md  utils.js
app/frontend/src/Components/: DocumentDetail.jsx  DocumentsByTopic.jsx  DropdownForm.jsx  HookTemplate.jsx  LabelDetail.jsx  Navbar.jsx  RenameForm.jsx  Settings.jsx  TextForm.jsx
app/frontend/src/Views/: Dashboard.js  DummyLogin.jsx  Home.jsx  TableView.jsx
docs/: README.md  action_items.md  customized_settings.md  known_issues.md  main_functionality.ipynb  model_analysis.ipynb
docs/IRB_approval_docs/: (3) Initial Application Part 2 revised 2.docx  Post-participation survey.docx  README.md  consent document revised 3.docx  recruitment_ad revised 2.docx
docs/power_analysis/: README.md  get_alto_results.ipynb  power_analysis_final.ipynb
