[tool.poetry]
name = "document annotation app"
version = "0.1.0"
description = ""
authors = ["Andrew <amao1@umd.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
SQLAlchemy = "^1.3.20"
PyJWT = "^1.7.1"
uvloop = "^0.14.0"
uvicorn = "^0.12.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
Unidecode = "^1.1.1"
pandas = "^1.1.4"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
jupyter = "^1.0.0"
ipykernel = "^5.5.3"
editdistance = "^0.5.3"
nltk = "^3.6.2"
modAL = "^0.4.1"
gensim = "<=3.8.3"
spacy = "^3.2.1"
tomotopy = "^0.12.2"


[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
